fixed card overflow

--- a/client/src/components/BlogCard/BlogCard.css
+++ b/client/src/components/BlogCard/BlogCard.css
@@ -2,4 +2,12 @@
       width: 250px;
       height: 300px;
       margin: 0 auto;
+      /* overflow: hidden; */
+}
+
+.card-title {
+      font-size: 16px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
 }
